@@ -37,7 +37,7 @@ location = ${buildout:directory}/python-2.6
 executable = ${python-2.6-build:executable}
 easy_install = ${opt:location}/bin/easy_install-2.6
 command =
-    ${:executable} ${buildout:python-buildout-root}/ez_setup.py
+    ${:executable} ${buildout:python-buildout-root}/ez_setup-2.2.py
     ${:easy_install} -U pip
     ${python-2.6-virtualenv:output} --system-site-packages ${:location}
 update-command = ${:command}
