@@ -29,7 +29,7 @@ location = ${buildout:directory}/python-3.2
 executable = ${python-3.2-build:executable}
 easy_install = ${opt:location}/bin/easy_install-3.2
 command =
-    ${:executable} ${buildout:python-buildout-root}/ez_setup.py
+    ${:executable} ${buildout:python-buildout-root}/ez_setup-2.2.py
     ${:easy_install} -U pip
     ${python-3.2-virtualenv:output} --system-site-packages ${buildout:directory}/python-3.2
 update-command = ${python-3.2:command}
